# kvault-back

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_test.yml  deployment.yml
docs/bruno-collection/: bruno.json
docs/bruno-collection/api/: folder.bru
docs/bruno-collection/environments/: environment.bru
docs/bruno-collection/front (-)/: GET -.bru  folder.bru
resources/migrations/0.3.0-alpha/: down.sql  up.sql
resources/migrations/0.4.0-alpha/: down.sql  up.sql
resources/migrations/0.5.0-alpha/: down.sql  up.sql
resources/migrations/0.5.1-alpha/: down.sql  up.sql
resources/migrations/0.6.1-alpha/: down.sql  up.sql
resources/sql/: schema.sql
src/: database.rs  db.rs  errors.rs  main.rs
src/authentication/: jwt_validator.rs  keys.rs  mod.rs  other.rs
src/controllers/: connection_controller.rs  entry_controller.rs  envelope_controller.rs  folder_controller.rs  infos_controller.rs  login_controller.rs  mod.rs  profile_controller.rs  user_controller.rs
src/errors/: app_error.rs  app_request_error.rs  common_error.rs  db_error.rs  mod.rs
src/mapper/: invitation_mapper.rs  mod.rs
src/middlewares/: authentication_middleware.rs  cors_impl.rs  error_logger.rs  error_logger_middleware.rs  jwt.rs  mod.rs
src/models/: config.rs  entry.rs  envelope.rs  folder.rs  invitation.rs  mod.rs  token.rs  user.rs
src/models/authentication/: jwt_keys.rs  mod.rs  token.rs  user.rs
src/models/config/: db_config.rs  env_config.rs  jwt_config.rs  mod.rs  server_config.rs
src/models/db/: user.rs
src/repository/: entry_repository.rs  envelope_repository.rs  folder_repository.rs  invitation_repository.rs  mod.rs  user_repository.rs
(+71 files in other folders)
