[package]
name = "kvault"
version = "0.2.1-alpha"
edition = "2024"

[dependencies]
actix-web = "4"

dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
confik = "0.15"
deadpool-postgres = { version = "0.14", features = ["serde"] }
derive_more = { version = "2", features = ["display", "error", "from"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7"
log = "0.4.28"
env_logger = "0.11.8"
futures-util = "0.3.31"
