[package]
name = "kvault"
version = "0.3.1-alpha"
edition = "2024"

[dependencies]
actix-web = "4"

dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
confik = "0.15"
deadpool-postgres = { version = "0.14", features = ["serde"] }
derive_more = { version = "2", features = ["display", "error", "from"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
tokio-postgres = "0.7"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
futures = "0.3.31"
serde_json = "1.0.143"
chrono = "0.4.42"
rand = "0.9.2"
argon2 = "0.5.3"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
base64 = "0.22.1"
